--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nodulus/api",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "api.js",
   "scripts": {
@@ -10,9 +10,22 @@
   "license": "ISC",
   "dependencies": {
     "@nodulus/config": "^1.0.9",
-    "@nodulus/data": "^1.0.6"
+    "@nodulus/data": "^1.0.6",
+    "@nodulus/logs": "^0.0.15"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "del": "^2.2.1",
+    "gulp": "^3.9.1",
+    "gulp-bump": "^2.2.0",
+    "gulp-ignore": "^2.0.1",
+    "gulp-publish": "^0.8.7",
+    "gulp-run": "^1.7.1",
+    "gulp-tslint": "^6.0.1",
+    "gulp-typescript": "^2.13.6",
+    "mocha": "^2.5.3",
+    "run-sequence": "^1.2.2",
+    "tslint": "^3.13.0",
     "typescript": "^1.8.10"
   }
 }
