--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@nodulus/api",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nodulusteam/-nodulus-api"
+  },
+  "author": "roi ben haim",
   "license": "ISC",
   "dependencies": {
-    "@nodulus/config": "^1.0.9",
-    "@nodulus/data": "^1.0.6",
-    "@nodulus/logs": "^0.0.15"
+    "@nodulus/config": "*",
+    "@nodulus/data": "^1.0.12",
+    "@nodulus/logs": "*"
   },
   "devDependencies": {
     "chai": "^3.5.0",
