--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nodulus/api",
-  "version": "1.0.10",
-  "description": "",
+  "version": "1.0.14",
+  "description": "rest endpoint for javascript & mobile applications",
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "https://github.com/nodulusteam/-nodulus-api"
   },
-  "author": "roi ben haim",
+  "keywords": [
+    "nodulus", "rest api"
+  ],
+  "author": "nodulus",
   "license": "ISC",
   "dependencies": {
     "@nodulus/config": "*",
