--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "@nodulus/api",
-  "version": "1.0.16",
+  "version": "1.0.21",
   "description": "rest endpoint for javascript & mobile applications",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests --recursive"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/nodulusteam/-nodulus-api"
   },
   "keywords": [
-    "nodulus", "rest api"
+    "nodulus",
+    "rest api"
   ],
   "author": "nodulus",
   "license": "ISC",
   "dependencies": {
-    "@nodulus/config": "*",
-    "@nodulus/data": "*",
-    "@nodulus/logs": "*"
+    "@nodulus/config": "^1.0.60",
+    "@nodulus/data": "^1.0.21",
+    "@nodulus/logs": "^0.0.22",
+    "@nodulus/core": "^1.0.20"
   },
- "devDependencies": {
+  "devDependencies": {
     "chai": "^3.5.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
